Wed Nov 12 00:26:37 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_object.rb: Specify an exception class for rescue clause.

	* test/dbm/test_dbm.rb: Ditto.

	* test/gdbm/test_gdbm.rb: Ditto.

	* test/sdbm/test_sdbm.rb: Ditto.

Tue Nov 11 23:43:51 2014  Tanaka Akira  <akr@fsij.org>

	* test/fileutils/test_fileutils.rb: Use assert_join_threads.

Tue Nov 11 22:51:14 2014  Tanaka Akira  <akr@fsij.org>

	* test/resolv/test_dns.rb: Use assert_join_threads.

Tue Nov 11 22:33:08 2014  Tanaka Akira  <akr@fsij.org>

	* test/net/pop/test_pop.rb: Use assert_join_threads.

Tue Nov 11 22:07:20 2014  Tanaka Akira  <akr@fsij.org>

	* test/net/http/test_https_proxy.rb: Use assert_join_threads.

Tue Nov 11 18:09:11 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/prelude.c.tmpl: move from tool/compile_prelude.rb and
	  expand by generic_erb.rb.

Tue Nov 11 13:01:31 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rubygems/commands/contents_command.rb (files_in_default_gem):
	  remove useless sort. show_files will sort the result and
	  another branch, files_in_gem, doesn't sort.
	  it should be removed for consistency.

	* test/rubygems/test_gem_commands_contents_command.rb
	  (test_execute_default_gem): adjust the sort algorithm with
	  Gem::Commands::ContentsCommand#show_files, which sort items
	  as array of [prefix, basename] not strings.

Tue Nov 11 10:37:09 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (sym_equal): use rb_obj_equal().
	  rb_obj_equal() is specially optimized in
	  opt_eq_func()@vm_insnhelper.c.

	  This fix is made from this discussion:
	  https://www.omniref.com/ruby/2.1.4/symbols/Symbol/%3D%3D#line=8361.

Tue Nov 11 09:38:55 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rdoc/known_classes.rb: reverted regression changes of
	  rdoc known class.

Tue Nov 11 00:21:50 2014  Tanaka Akira  <akr@fsij.org>

	* test/net/imap/test_imap.rb: Don't ignore exceptions on server
	  threads.
